--- a/tchat/src/main/resources/templates/loginSubmit.html
+++ b/tchat/src/main/resources/templates/loginSubmit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns:th="http://www.thymeleaf.org">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
